--- a/config/default.yml
+++ b/config/default.yml
@@ -85,6 +85,19 @@ number:
     units: ["", 만, 억, 조, 경, 해, 자, 양, 구, 간, 정, 재, 극, 항하사, 아승기, 나유타, 불가사의, 무량대수]
     digits: [영, 일, 이, 삼, 사, 오, 육, 칠, 팔, 구]
 
+    # 정수형일 때 또다른 표현법 (나이, 시간)
+    alt notation:
+        when suffix:
+            살:
+                max: 
+            시:
+                max: 12
+        tenfolds: [열, 스물, 서른, 마흔, 쉰, 예순, 일흔, 여든, 아흔, 백]
+        digits: ["", 한, 두, 세, 네, 다섯, 여섯, 일곱, 여덟, 아홉]
+        post substitution:
+            물살: 무살
+            물시: 무살
+
 romanization:
     chosung:
         ㄱ: g
@@ -137,9 +150,7 @@ romanization:
         ㅂ: p
         ㅇ: ng
     post substitution:
+        # 제2항 [붙임 2]‘ㄹ’은 모음 앞에서는 ‘ｒ’로, 자음 앞이나 어말에서는
+        # ‘ｌ’로 적는다. 단, ‘ㄹㄹ’은 ‘ll’로 적는다.
         lr: ll
-        hk: k
-        hd: t
-        hb: p
-        hj: ch
 
