test cases added

--- a/test/romanization.yml
+++ b/test/romanization.yml
@@ -100,3 +100,6 @@
 "없었습니다.": "eobs-eoss-seubnida"
 "20%da kkkrl": "isip%da kkkrl"
 "안녕하세요": "annyeonghaseyo"
+"ㅠㅠ": "Yuyu"
+"ㄶ": "Eun"
+"ㅋㅋㅋ": "Keukeukeu"
