--- a/config/default.yml
+++ b/config/default.yml
@@ -84,14 +84,22 @@ pronouncer:
             rule_16: [rule_30]
 
 number:
+    positive: 플러스
     negative: 마이너스
     decimal point: 점
     units: ["", 만, 억, 조, 경, 해, 자, 양, 구, 간, 정, 재, 극, 항하사, 아승기, 나유타, 불가사의, 무량대수]
     digits: [영, 일, 이, 삼, 사, 오, 육, 칠, 팔, 구]
+    post substitution:
+        ? !ruby/regexp /^일만/
+        : 만
 
     # 정수형일 때 또다른 표현법 (나이, 시간)
     alt notation:
         when suffix:
+            개:
+                max: 
+            명:
+                max: 
             살:
                 max: 
             시:
