--- a/config/default.yml
+++ b/config/default.yml
@@ -107,7 +107,8 @@ number:
         tenfolds: [열, 스물, 서른, 마흔, 쉰, 예순, 일흔, 여든, 아흔, 백]
         digits: ["", 한, 두, 세, 네, 다섯, 여섯, 일곱, 여덟, 아홉]
         post substitution:
-            물살: 무살
+            ? !ruby/regexp /스물$/
+            : 스무
 
 romanization:
     chosung:
