--- a/config/default.yml
+++ b/config/default.yml
@@ -90,8 +90,7 @@ number:
     units: ["", 만, 억, 조, 경, 해, 자, 양, 구, 간, 정, 재, 극, 항하사, 아승기, 나유타, 불가사의, 무량대수]
     digits: [영, 일, 이, 삼, 사, 오, 육, 칠, 팔, 구]
     post substitution:
-        ? !ruby/regexp /^일만/
-        : 만
+        "^일만": 만
 
     # 정수형일 때 또다른 표현법 (나이, 시간)
     alt notation:
@@ -107,8 +106,7 @@ number:
         tenfolds: [열, 스물, 서른, 마흔, 쉰, 예순, 일흔, 여든, 아흔, 백]
         digits: ["", 한, 두, 세, 네, 다섯, 여섯, 일곱, 여덟, 아홉]
         post substitution:
-            ? !ruby/regexp /스물$/
-            : 스무
+            "스물$": 스무
 
 romanization:
     chosung:
@@ -171,9 +169,6 @@ romanization:
         ttt: t-tt
         ppp: p-pp
         "--": "-"
-        ? !ruby/regexp /n-([^gaeiou])/
-        : "n\\1"
-        ? !ruby/regexp /-(\s)/
-        : "\\1"
-        ? !ruby/regexp /-$/
-        : ""
+        "n-([^gaeiou])": "n\\1"
+        "-(\\s)": "\\1"
+        "-$": ""
